# prisma

./: .env.example  .gitignore  AGENTS.md  README.md  admin.py  pyproject.toml
esup_news/: cli.py  config.py  db.py  scheduler.py
esup_news/analysis/: reports.py  soft_duplicate.py
esup_news/classification/: matcher.py  scorer.py
esup_news/ingestion/: dedupe.py  normalizer.py  orchestrator.py  queries.py
esup_news/providers/: base.py  newsdata.py  registry.py  thenewsapi.py
esup_news/seeds/: courses.py  keywords.py
tests/: test_dedupe.py  test_normalizer.py  test_scorer.py
web/: .gitignore  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/curso/[slug]/: page.tsx
web/app/noticia/[slug]/: page.tsx
web/app/tema/[slug]/: page.tsx
web/components/: AbstractCover.tsx  Closing.tsx  CourseBlock.tsx  CourseTracker.tsx  CoursesIndex.tsx  CursorHalo.tsx  Footer.tsx  Header.tsx  Hero.tsx  LatestStrip.tsx  MobileMenu.tsx  NewsCard.tsx  Parallax.tsx  PrismMark.tsx  Reveal.tsx  ScrollProgress.tsx  ThemeBlock.tsx  ThemeScript.tsx  ThemeToggle.tsx  ThemesIndex.tsx
web/lib/: format.ts  types.ts
web/lib/data/: articles.json
web/lib/mock/: articles.ts  courses.ts  themes.ts
